chore(deps): update pom.xml